tests/fixtures/invalid/bytes_mod_str.py
# Cannot modulo Bytes and Str
x: bytes = b"hello" % "hello"
